// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPage renders correctly 1`] = `
<Page
  empty={Object {}}
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Add Suppressions",
      "to": "/lists/suppressions/create",
    }
  }
  title="Suppressions"
>
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "content": "Filters",
          "onClick": [Function],
        },
        Object {
          "content": "Find by Email",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "reportFilters": undefined,
                },
              ],
            ],
          }
        }
      />
    </Panel.Section>
  </Panel>
  <Connect(Results) />
</Page>
`;

exports[`ListPage renders correctly with subaccounts 1`] = `
<Page
  empty={Object {}}
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Add Suppressions",
      "to": "/lists/suppressions/create",
    }
  }
  title="Suppressions"
>
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "content": "Filters",
          "onClick": [Function],
        },
        Object {
          "content": "Find by Email",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "reportFilters": undefined,
                },
              ],
              Array [
                Object {
                  "reportFilters": undefined,
                },
              ],
            ],
          }
        }
      />
    </Panel.Section>
  </Panel>
  <Connect(Results)
    hasSubaccounts={true}
  />
</Page>
`;

exports[`ListPage renders filter by email tab correctly when selected 1`] = `
<Page
  empty={Object {}}
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Add Suppressions",
      "to": "/lists/suppressions/create",
    }
  }
  title="Suppressions"
>
  <Tabs
    connectBelow={true}
    selected={1}
    tabs={
      Array [
        Object {
          "content": "Filters",
          "onClick": [Function],
        },
        Object {
          "content": "Find by Email",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Connect(Results) />
</Page>
`;
